--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -26,7 +26,7 @@
             <div class="text-center"> 
                 <button class=" btn btn-outline-dark  px-4" type="submit" >Войти</button> 
             </div> 
-        </form>
+        </form>A
 </div>
 </div>
 </div>
