--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -28,9 +28,9 @@
         <a class="site-logo" href="#"><img src="{% static 'img/logo.png' %}" alt=""></a>
             <div class="user-panel">
                 {% if user.is_authenticated %}
-                    <a href="http://127.0.0.1:8000/accounts/logout/">Выйти</a>
+                    <a href="{% url 'account_logout' %}">Выйти</a>
                 {% else %}
-                    <a href="http://127.0.0.1:8000/accounts/login/">Войти</a>  /  <a href="http://127.0.0.1:8000/accounts/signup/">Регистрация</a>
+                    <a href="{% url 'account_login' %}">Войти</a>  /  <a href="{% url 'account_signup' %}">Регистрация</a>
                 {% endif %}      
             </div>
             <div class="nav-switch">
