--- a/templates/ads/ad.html
+++ b/templates/ads/ad.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 {% block title %}{% endblock %}
 {% block content %}
-<section class="page-section community-page set-bg" data-setbg="{% static 'img/picture.jpg' %}">
+<section class="page-section community-page set-bg" data-setbg="{% static 'img/pict.jpg' %}">
     <div class="community-warp spad">
         <div class="container">
             <ul class="community-post-list">
