--- a/templates/ads/ad_create.html
+++ b/templates/ads/ad_create.html
@@ -3,12 +3,7 @@
 {% load crispy_forms_tags %}
 {% block title %}Create Ad{% endblock title %}
 {% block content %}
-<style>
-.control-group {
-margin: 20px 0px;
-    }
-</style>
-<section class="page-section community-page set-bg " data-setbg="{% static 'img/picture.jpg' %}">
+<section class="page-section community-page set-bg " data-setbg="{% static 'img/pict.jpg' %}">
     <div class="community-warp ">
         <div class="container">
             <div class="row justify-content-center">
