--- a/templates/ads/comment.html
+++ b/templates/ads/comment.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% block title %}{% endblock title %}
 {% block content %}
-<section class="page-section community-page set-bg" data-setbg="{% static 'img/picture.jpg' %}">
+<section class="page-section community-page set-bg" data-setbg="{% static 'img/pict.jpg' %}">
 <div class="community-warp spad">
 <div class="container">
 {% for comment in comments %}
