--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -38,7 +38,7 @@
 			</div>               
                 <nav class="main-menu">
                     <ul>
-                        <li><a href="#">Новости</a></li>
+                        <li><a href="{% url 'posts' %}">Новости</a></li>
                         <li><a href="#">Игры</a></li>
                         <li><a href="{% url 'ads' %}">Объявления</a> </li>
                         <li><a href="#">Книги</a></li>
@@ -74,6 +74,8 @@
 <script src="{% static 'js/owl.carousel.min.js' %}"></script>
 <script src="{% static 'js/jquery.marquee.min.js' %}"></script>
 <script src="{% static 'js/main.js' %}"></script>
+{% block js %} 
+{% endblock %}
 </body>
 </html>
 
