--- a/static/css/style.css
+++ b/static/css/style.css
@@ -272,14 +272,14 @@ ol {
 .site-logo {
 	/* float: left; */
 	display: inline-block;
-	padding-top: 6px;
 }
 
 .user-panel {
 	float: right;
 	font-weight: 500;
 	background: #ffb320;
-	padding: 8px 28px;
+	padding: 11px 28px 14px;
+	
 	border-radius: 30px;
 }
 
@@ -302,6 +302,7 @@ border-color: #131313;
 }
 
 .main-menu ul {
+	margin: 0;
 	list-style: none;
 }
 
@@ -850,7 +851,7 @@ border-color: #131313;
 .footer-section {
 	padding: 18px 0 16px;
 	overflow: hidden;
-	background: #252525;
+	background: #131313;
 }
 
 .footer-menu {
@@ -876,6 +877,59 @@ border-color: #131313;
 	font-weight: 500;
 	color: #aeaeae;
 }
+.footer .copyright {
+	margin-top: 30px;
+    padding: 25px 0 0;
+    font-size: 15px;
+    border-top: 1px solid rgba(256, 256, 256, .1);
+}
+
+.footer .copyright a {
+    color: var(--secondary);
+}
+
+.footer .copyright a:hover {
+    color: #FFFFFF;
+}
+.footer .btn.btn-link {
+    display: block;
+    margin-bottom: 5px;
+    padding: 0;
+    text-align: left;
+    color: #A7A8B4;
+    font-weight: normal;
+	text-decoration: none;
+    text-transform: capitalize;
+    transition: .3s;
+}
+
+.footer .btn.btn-link::before {
+    position: relative;
+    content: "»";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    color: #A7A8B4;
+    margin-right: 10px;
+}
+
+.footer .btn.btn-link:hover {
+    color: var(--light);
+    letter-spacing: 1px;
+    box-shadow: none;
+}
+
+.footer .btn.btn-square {
+    color: #A7A8B4;
+    border: 1px solid#A7A8B4;
+}
+
+.footer .btn.btn-square:hover {
+    color: var(--secondary);
+    border-color: var(--light);
+}
+
+
+
 
 /*------------------
   Other Pages
@@ -906,6 +960,7 @@ border-color: #131313;
 	text-align: center;
 	padding-top: 30px;
 	margin: 0;
+	color: #fff;
 }
 
 .site-pagination a,
@@ -917,8 +972,8 @@ border-color: #131313;
 	padding-top: 6px;
 	text-align: center;
 	display: inline-block;
+	color: #fff;
 	border-radius: 50%;
-	color: #131313;
 	margin-right: 10px;
 	text-decoration: none;
 }
@@ -926,24 +981,33 @@ border-color: #131313;
 .site-pagination a:hover {
 	color: inherit;
 } 
-.site-pagination .link {
-	width: 65px;
-	padding-top: 5px;
-}
+.site-pagination .link ,
 .site-pagination .link-end {
-	width: 90px !important;
+	color: #000;
 }
-
+.site-pagination .link:hover ,
+.site-pagination .link-end:hover {
+	color: #000;
+}
 .sp-style-2 a,
 .sp-style-2 .link,
 .sp-style-2 span {
-	background: #e5e5e5;
+	background-color: #6c757d;
+	border-color:#6c757d;
+	
 }
 .sp-style-2 a:hover,
 .sp-style-2 .link:hover,
 .sp-style-2 span:hover {
-	background: inherit;
+	background-color:#5a6268;
+	border-color:#545b62;
 	transition: all 0.3s ease-in-out;
+}
+
+.sp-style-2 a:focus,
+.sp-style-2 .link:focus,
+.sp-style-2 span:focus{
+	box-shadow:0 0 0 .2rem rgba(108,117,125,.5)
 }
 
 .widget-item {
@@ -1325,6 +1389,7 @@ border-color: #131313;
 	.page-info-section .pi-content h2 {
 		font-size: 50px;
 	}
+
 }
 
 /* Tablet :768px. */
@@ -1339,9 +1404,9 @@ border-color: #131313;
 	.main-menu ul li a {
 		margin-left: 15px;
 	}
-	.user-panel {
+	/* .user-panel {
 		padding: 15px 15px;
-	}
+	} */
 	.hero-slider .hs-text h2 {
 		font-size: 50px;
 	}
@@ -1368,6 +1433,9 @@ border-color: #131313;
 	}
 	.footer-logo {
 		margin-bottom: 50px;
+	}
+	.footer .copyright {
+		margin-top: 50px;
 	}
 	.latest-blog .lb-item .lb-thumb {
 		width: 80px;
@@ -1455,7 +1523,6 @@ border-color: #131313;
 	}
 	.footer-section {
 		padding: 30px 0 20px;
-		text-align: center;
 	}
 	.footer-menu li:first-child a {
 		margin-left: 0;
@@ -1467,12 +1534,16 @@ border-color: #131313;
 	.copyright {
 		padding-top: 15px;
 	}
+	.footer .copyright {
+		margin-top: 50px;
+	}
 	.community-post-list li {
 		padding: 30px 25px 30px;
 	}
 	.page-info-section .pi-content h2 {
 		font-size: 50px;
 	}
+
 }
 
 /* Medium Mobile :480px. */
