--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" href="{% static 'css/animate.css' %}"/>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    
 </head>
 <body>    
 <div id="preloder">
@@ -25,7 +26,7 @@
 </div>
 <header class="header-section">
     <div class="container">
-        <a class="site-logo" href="#">Logo</a>
+        <a class="site-logo" href="#"><img src="{% static 'img/icons/logo.png' %}" alt="logo" ></a>
             <div class="user-panel">
                 {% if user.is_authenticated %}
                     <a href="{% url 'account_logout' %}">Выйти</a>
@@ -38,7 +39,7 @@
 			</div>               
                 <nav class="main-menu">
                     <ul>
-                        <li><a href="{% url 'posts' %}">Новости</a></li>
+                        <li><a href="#">Новости</a></li>
                         <li><a href="#">Игры</a></li>
                         <li><a href="{% url 'ads' %}">Объявления</a> </li>
                         <li><a href="#">Книги</a></li>
@@ -51,16 +52,57 @@
 </header>
 {% block content %}
 {% endblock content %}
-<footer class="footer-section">
-    <div class="container">
-        <ul class="footer-menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="review.html">Games</a></li>
-            <li><a href="categories.html">Blog</a></li>
-            <li><a href="community.html">Forums</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <p class="copyright">Copyright &copy;<script>document.write(new Date().getFullYear());</script></p>
+<footer class="footer footer-section">
+    <div class="container pt-5">
+        
+        <div class="row g-5">
+            <div class="col-lg-3 col-md-6">
+            	<h1><img src="{% static 'img/icons/logo.png' %}" alt="logo"></h1>
+                <p>Suspendisse hendrerit tellus laoreet luctus pharetra. Aliquam porttitor vitae orci nec ultricies. Curabitur vehicula, libero eget faucibus faucibus.</p>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <h5 class="text-light mb-4">Адрес</h5>
+                <p>
+                  <i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA
+                </p>
+                <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+                <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
+              </div>
+            <div class="col-lg-3 col-md-6">
+                <h5 class="text-light  mb-4">Меню</h5>
+                <a class="btn btn-link" href="{% url 'ads' %}">Объявления</a>
+                <a class="btn btn-link" href="#">Новости</a>
+                <a class="btn btn-link" href="#">Игры</a>
+                <a class="btn btn-link" href="">Книги</a>
+                {% if user.is_authenticated %}
+                    <a class="btn btn-link" href="{% url 'comments' %}">Комментарии</a>
+                {% endif %}
+            </div>
+
+            <div class="col-lg-3 col-md-6">
+                <h5 class="text-light mb-4">Рассылка</h5>
+                <p>Подпишись на нашу рассылку</p>
+                <div class="position-relative input-email" style="max-width: 400px">
+                  <input class="form-control bg-transparent text-white w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email"/>
+                  <button type="button" class="btn btn-secondary btn-sm py-2 position-absolute top-0 end-0">
+                   Подписаться
+                  </button>
+                </div>
+              </div>
+              <div class="container-fluid copyright">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-md-6 text-center text-md-start  mb-md-0">
+                      &copy; <a href="#">Your Site Name</a>, All Right Reserved.
+                    </div>
+                    <div class="col-md-6 text-center text-md-end">
+                        <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        
+    </div>
     </div>
 </footer>
 
@@ -79,5 +121,13 @@
 </body>
 </html>
 
+<!-- 
 
-
+<ul class="footer-menu">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="review.html">Games</a></li>
+    <li><a href="categories.html">Blog</a></li>
+    <li><a href="community.html">Forums</a></li>
+    <li><a href="contact.html">Contact</a></li>
+</ul>
+<p class="copyright">Copyright &copy;<script>document.write(new Date().getFullYear());</script></p> -->
