--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,18 +5,18 @@
 
 <div class="container">
     <div class="card-body py-5 px-md-5">
-    <div class="row d-flex justify-content-center">
-    <div class="col-lg-6">
-        <div class="text-center">
-            <h2 class="fw-bold mb-5"> Вы действительно хотите выйти? </h2>
+        <div class="row d-flex justify-content-center">
+            <div class="col-lg-6">
+            <h2 class="fw-bold mb-5 text-center"> Вы действительно хотите выйти? </h2>
                 <form  method="post">
-                {% csrf_token %}
-                {{ form.as_p }}         
-                    <button class=" btn btn-outline-dark px-4" type="submit">Выйти</button>
-                </div>
+                    <div class="text-center">
+                        {% csrf_token %}
+                        {{ form.as_p }}         
+                        <button class=" btn btn-outline-dark px-4" type="submit">Выйти</button>
+                    </div>
                 </form>
-    </div>
-    </div>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
